app/assets/stylesheets/layout/lists/compact.css
.listing.compact .items {
  display: table;
  margin: 0;
  padding: 0;
  width: 100%;
  table-layout: auto;
  border-bottom: solid 1px rgba(0,0,0,0.1);
}

.listing.compact .row.heads {
  font-weight: bold;
}
.listing.compact .row {
  font-weight: initial;
}

.listing.compact .items .row:target {
  outline: solid 5px rgba(170,170,255,0.6);
  background: #eef;
}

.listing.compact .items .row.selected div > span,
.listing.compact .items .row.selected > div + div > span {
  border-left: solid 1px rgba(255,255,255,0.2);
  color: rgba(255,255,255,0.8);
}

.listing.compact .row.selected > div {
  border-color: #88e;
  border-bottom: solid 1px #88c;
}

.listing.compact .row > div {
  overflow: hidden;
}

.listing.compact .items .row > a,
.listing.compact .items .row > div {
  display: table-cell;
  color: #000;
  padding: 5px;
  line-height: 20px;
  border-top: solid 1px var(--table-inner-border);
}
.listing.compact .row.selected div {
  color: #fff;
}

.listing.compact span, .listing.compact .row {
  text-decoration: none;
  padding: 0 10px;
  color: #000;
}
.listing.compact .items .row div > span,
.listing.compact .items .row > div + div > span {
  border-left: solid 1px var(--table-inner-border);
  margin-left: -1px;
  font-weight: initial;
  color: #888;
}
.listing.compact .items .title:before {
  content: '\f04b';
  font-family:'FontAwesome';
  padding-right: 10px;
}
.listing.compact .items .title {
  padding: 0 0 0 30px;
  position: relative;
}
.listing.compact .items .title div {
  display: inline-block;
  position: absolute;
  left: 20px;
  right: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.listing.compact .items .author  {
  width: 0;
}
.listing.compact .items .duration {
  text-align: center;
  width: 90px;
}
.listing.compact .items .remove {
  text-align: center;
  width: 40px;
}
.listing.compact .items .hidden-item div {
  font-weight: initial;
  color: #aaa;
}
.listing.compact .items .hidden-item .title:before {
  opacity: 0;
}

.listing.compact .items .row > span,
.listing.compact .items .row div > span,
.listing.compact .items .row > div div {
  vertical-align: middle;
  display: inline-block;
  white-space: nowrap;
}

.listing.compact.playlist .row.selected {
  background: #6aaadd;
}

.listing.compact.playlist .items .row span,
.listing.compact.limit-overflow .items .row > div div {
  width: 0;
}
.listing.compact.playlist .items .row .title {
  padding-left: 20px;
}
.listing.compact.playlist .items .row .title div {
  position: static;
  width: 0;
  overflow: visible;
}
.listing.compact.playlist .items .row .title .author {
  display: table-row;
  
}
.listing.compact.playlist .items .row .title .author span {
  border: none;
  padding-left: 0;
}

.listing.compact .row.foot {
  display: block;
  padding: 0 10px;
  border-bottom: solid 1px rgba(0,0,0,0.1);
  line-height: 20px;
}

.listing.compact .row.row-group {
  display: table-row-group;
  width: 100%;
}
.listing.compact .row.row-group.row-group-collapse:hover .row ~ .row,
.listing.compact .row.row-group .row {
  display: table-row;
}
.listing.compact .row.row-group.row-group-collapse .row ~ .row {
  display: none;
}
.listing.compact .row.row-group .row > div {
  display: table-cell;
}
.listing.compact .row.row-group.row-group-collapse .row:hover {
  background: rgba(199,100,220,0.1);
}

.listing.compact .row-spanned {
  position: relative;
  margin-top: 100%;
  width: 100%;
  overflow: hidden;
  background: inherit;
}

.listing.compact .row-spanned > .content {
  position: absolute;
  width: calc(100%);
  height: 100%;
  background: var(--content-background);
  max-width: 100%;
  padding: 0 !important;
}

.listing.compact .items .row.row-spanned > .content div {
  display: block;
}

.playlist .controls a:hover,
.listing.compact .row.selected,
.listing.compact .row:hover {
  background: var(--header-overlay-element-focus-fill);
}

.listing.compact a, .thread-list .items .thread a {
  text-decoration: none;
}

.listing.compact .row div.tag-editor {
  display: block !important;
}

.listing.compact + section h1 {
  margin-top: 10px;
}

